# astral

./: .gitignore  CLAUDE.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/audio/: ambient.py  pipeline.py  registry.py  streaming.py  voice.py
backend/app/features/: dnd_api.py  dnd_encounter_v2.py  dnd_equipment.py  dnd_equipment_list.py  dnd_magic_item.py  dnd_monster.py  dnd_monsters_api_filter.py  dnd_weapon_properties.py
backend/app/game/: consequence_manager.py  dice.py  entity_manager.py  json_ops.py  location_manager.py  npc_manager.py  player_manager.py  plot_manager.py  search.py  session_manager.py  validators.py
backend/app/import_pipeline/: chunker.py  extractor.py
backend/app/import_pipeline/agents/: extractor-items.md  extractor-locations.md  extractor-npcs.md  extractor-plots.md
backend/app/orchestrator/: dm.py  parser.py  tools.py
backend/app/orchestrator/prompts/: dm_system.md
backend/app/orchestrator/prompts/specialists/: create-character.md  dungeon-architect.md  gear-master.md  loot-dropper.md  monster-manual.md  npc-builder.md  rules-master.md  spell-caster.md  voice-director.md  world-builder.md
backend/app/routers/: campaigns.py  session.py
backend/data/: active-campaign.txt
backend/data/campaigns/lost-mine-of-phandelver/: campaign-overview.json  character.json  consequences.json  current-document.txt  facts.json  items.json  locations.json  metadata.json  npcs.json  opening-cache.json  plots.json  session-log.md  voice-registry.json
frontend/: index.html
frontend/src/: App.css  App.tsx  (+1 more)
(+157 files in other folders)
