[project]
name = "astral"
version = "0.1.0"
description = "AI game master platform — solo D&D sessions with streamed audio"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "python-multipart>=0.0.18",

    # AI
    "anthropic>=0.42.0",

    # Audio
    "elevenlabs>=1.0.0",

    # PDF / document processing
    "pdfplumber>=0.11.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",

    # RAG
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",

    # D&D 5e API
    "requests>=2.32.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
